Added "hit enter and go there" functionality. Copied the style sheets and image from the older version. Still don't know how to remove the top margin of the tabs.

--- a/app.yaml
+++ b/app.yaml
@@ -4,9 +4,6 @@ runtime: python
 api_version: 1
 
 handlers:
-- url: /stylesheets
-  static_dir: stylesheets
-
 - url: /
   script: index.py
   
@@ -21,3 +18,6 @@ handlers:
 
 - url: /stylesheets
   static_dir: stylesheets
+
+- url: /img
+  static_dir: img
