Added tweets.html and tweets.py. Changed app.yaml to include tweets.py and tweets.html. Changed index.html so that the tweet page is currently loaded the most recent 100 tweets 100km around los angeles.

--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,9 @@ handlers:
 
 - url: /apis/googlemap.html
   script: /apis/googlemap.py
+  
+- url: /apis/tweets.html
+  script: /apis/tweets.py
 
 - url: /stylesheets
   static_dir: stylesheets
